@@ -145,8 +145,21 @@ extern MACHINE_DRIVER_EXTERN(by45);
 
 #define BY45_SOUNDROMx2(n1,chk1) \
   SOUNDREGION(0x10000, BY45_CPUREGION) \
-    ROM_LOAD(n1, 0xc000, 0x2000, chk1) \
+    ROM_LOAD(n1, 0x8000, 0x2000, chk1) \
+      ROM_RELOAD(0xa000, 0x2000) \
+      ROM_RELOAD(0xc000, 0x2000) \
       ROM_RELOAD(0xe000, 0x2000)
+
+#define BY45_SOUNDROM2x(n1,chk1) \
+  SOUNDREGION(0x10000, BY45_CPUREGION) \
+    ROM_LOAD(n1, 0x8000, 0x1000, chk1) \
+      ROM_CONTINUE(0xc000, 0x1000) \
+      ROM_RELOAD(0x9000, 0x1000) \
+      ROM_CONTINUE(0xd000, 0x1000) \
+      ROM_RELOAD(0xa000, 0x1000) \
+      ROM_CONTINUE(0xe000, 0x1000) \
+      ROM_RELOAD(0xb000, 0x1000) \
+      ROM_CONTINUE(0xf000, 0x1000)
 
 /* 2 x 4K ROMS */
 #define BY45_SOUNDROM11(n2,chk2,n1,chk1) \
